--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am a recent graduate student of CMU, and am currently looking for full-time positions in Product Management, Consulting or Business Intelligence.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>I'm especially passionate about the intersection of technology, education and healthcare. Languages, Sci-fi and DICOM skulls are a few of my favourite things. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="https://drive.google.com/uc?export=download&id=0B6xAwhVcQNfOdnlSRXVwRUUzYms" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
             </div>
