--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -25,8 +25,8 @@
                                     <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
+                                <li>Role:
+                                    <strong><a href="http://startbootstrap.com">{{ post.position }}</a>
                                     </strong>
                                 </li>
                             </ul>
